src/main/java/org/example/booktopia/error/InsufficientStock.java
package org.example.booktopia.error;

public class InsufficientStock extends Exception {
    public InsufficientStock() {
        super("Transaction declined insufficient stock");
    }
}
